--- a/src/main/resources/com/example/orthoj/View/dashboard.fxml
+++ b/src/main/resources/com/example/orthoj/View/dashboard.fxml
@@ -13,11 +13,12 @@
    <children>
       <PieChart fx:id="troublesPercent" layoutX="803.0" layoutY="599.0" prefHeight="306.0" prefWidth="369.0" />
       <Label layoutX="743.0" layoutY="919.0" prefHeight="43.0" prefWidth="494.0" styleClass="title3" text="Pourcentage de patients par trouble" />
-      <VBox alignment="CENTER" layoutY="-1.0" prefHeight="1070.0" prefWidth="370.0" style="-fx-background-color: EDECF4;">
+      <VBox alignment="CENTER" layoutY="-1.0" prefHeight="961.0" prefWidth="370.0" style="-fx-background-color: EDECF4;">
          <children>
             <Label styleClass="title1" text="Ortho-J" />
             <VBox alignment="CENTER" prefHeight="611.0" prefWidth="370.0" spacing="30.0">
                <children>
+                  <Button fx:id="home" mnemonicParsing="false" onAction="#onHome" styleClass="menu-button" text="Home" />
                   <Button fx:id="listePatients" mnemonicParsing="false" onAction="#onListePatients" prefHeight="25.0" prefWidth="135.0" styleClass="menu-button" text="Patients" />
                   <Button fx:id="calendrier" mnemonicParsing="false" onAction="#onCalendrier" prefHeight="25.0" prefWidth="135.0" styleClass="menu-button" text="Calendrier" />
                   <Button fx:id="questions" mnemonicParsing="false" onAction="#onQuestions" prefHeight="39.0" prefWidth="171.0" styleClass="menu-button" text=" Questionnaires" />
