--- a/src/main/resources/com/example/orthoj/View/liste_QCM_home.fxml
+++ b/src/main/resources/com/example/orthoj/View/liste_QCM_home.fxml
@@ -1,18 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.orthoj.Controller.ListeQCMHome">
+<AnchorPane prefHeight="830.0" prefWidth="1440.0" stylesheets="@../Style/button.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.orthoj.Controller.ListeQCMHome">
    <children>
-      <ScrollPane layoutX="77.0" layoutY="74.0" prefHeight="252.0" prefWidth="447.0">
-         <content>
-            <FlowPane fx:id="buttonArea" prefHeight="250.0" prefWidth="445.0" />
-         </content>
-      </ScrollPane>
-      <Button fx:id="annuler" layoutX="524.0" layoutY="342.0" mnemonicParsing="false" onAction="#onAnnuler" text="Annuler" />
-      <Button fx:id="ajouter" layoutX="447.0" layoutY="342.0" mnemonicParsing="false" onAction="#ajouter" text="Ajouter" />
+      <VBox alignment="CENTER" layoutX="436.0" layoutY="44.0" prefHeight="710.0" prefWidth="596.0" spacing="30.0">
+         <children>
+            <Label styleClass="title1" text="Liste des QCM" />
+            <ScrollPane prefHeight="252.0" prefWidth="447.0">
+               <content>
+                  <FlowPane fx:id="buttonArea" prefHeight="250.0" prefWidth="445.0" />
+               </content>
+            </ScrollPane>
+            <HBox alignment="CENTER" prefHeight="43.0" prefWidth="268.0" spacing="30.0">
+               <children>
+                  <Button fx:id="annuler" mnemonicParsing="false" onAction="#onAnnuler" text="Annuler" />
+                  <Button fx:id="ajouter" mnemonicParsing="false" onAction="#ajouter" text="Ajouter" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+      <VBox alignment="CENTER" layoutX="-2.0" layoutY="-1.0" prefHeight="971.0" prefWidth="382.0" style="-fx-background-color: EDECF4;">
+         <children>
+            <Label styleClass="title1" text="Ortho-J" />
+            <VBox alignment="CENTER" prefHeight="611.0" prefWidth="370.0" spacing="30.0">
+               <children>
+                  <Button fx:id="home" mnemonicParsing="false" onAction="#onHome" styleClass="menu-button" text="Home" />
+                  <Button fx:id="listePatients" mnemonicParsing="false" onAction="#onListePatients" prefHeight="25.0" prefWidth="135.0" styleClass="menu-button" text="Patients" />
+                  <Button fx:id="calendrier" mnemonicParsing="false" onAction="#onCalendrier" prefHeight="25.0" prefWidth="135.0" styleClass="menu-button" text="Calendrier" />
+                  <Button fx:id="questions" mnemonicParsing="false" onAction="#onQuestions" prefHeight="39.0" prefWidth="171.0" styleClass="menu-button" text=" Questionnaires" />
+                  <Button fx:id="anam" mnemonicParsing="false" onAction="#onAnam" prefHeight="39.0" prefWidth="211.0" styleClass="menu-button" text="Anamnèse questions" />
+                  <Button fx:id="disconnect" mnemonicParsing="false" onAction="#onDisconnect" prefHeight="25.0" prefWidth="135.0" styleClass="menu-button" text="Déconnecter" />
+               </children>
+            </VBox>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
