--- a/src/main/resources/com/example/orthoj/View/questions_home.fxml
+++ b/src/main/resources/com/example/orthoj/View/questions_home.fxml
@@ -1,18 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.orthoj.Controller.QuestionsHome">
+<AnchorPane prefHeight="810.0" prefWidth="1440.0" stylesheets="@../Style/button.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.orthoj.Controller.QuestionsHome">
    <children>
-      <HBox layoutX="197.0" layoutY="188.0" prefHeight="25.0" prefWidth="206.0" spacing="40.0">
+      <VBox alignment="CENTER" layoutX="634.0" layoutY="277.0" prefHeight="452.0" prefWidth="520.0" spacing="50.0">
          <children>
-            <Button fx:id="qcm" mnemonicParsing="false" onAction="#onQcm" text="QCM" />
-            <Button fx:id="qcu" mnemonicParsing="false" onAction="#onQcu" text="QCU" />
-            <Button fx:id="ql" mnemonicParsing="false" onAction="#onQl" prefHeight="25.0" prefWidth="40.0" text="QL" />
+            <Label styleClass="title1" text="Questions" />
+            <Label styleClass="title3" text="Créer des templates pour les tests" />
+            <HBox alignment="CENTER" prefHeight="45.0" prefWidth="307.0" spacing="40.0">
+               <children>
+                  <Button fx:id="qcm" mnemonicParsing="false" onAction="#onQcm" text="QCM" />
+                  <Button fx:id="qcu" mnemonicParsing="false" onAction="#onQcu" text="QCU" />
+                  <Button fx:id="ql" mnemonicParsing="false" onAction="#onQl" prefHeight="39.0" prefWidth="92.0" text="QL" />
+               </children>
+            </HBox>
          </children>
-      </HBox>
+      </VBox>
+      <VBox alignment="CENTER" layoutX="-2.0" layoutY="-1.0" prefHeight="1071.0" prefWidth="382.0" style="-fx-background-color: EDECF4;">
+         <children>
+            <Label styleClass="title1" text="Ortho-J" />
+            <VBox alignment="CENTER" prefHeight="611.0" prefWidth="370.0" spacing="30.0">
+               <children>
+                  <Button fx:id="home" mnemonicParsing="false" onAction="#onHome" styleClass="menu-button" text="Home" />
+                  <Button fx:id="listePatients" mnemonicParsing="false" onAction="#onListePatients" prefHeight="25.0" prefWidth="135.0" styleClass="menu-button" text="Patients" />
+                  <Button fx:id="calendrier" mnemonicParsing="false" onAction="#onCalendrier" prefHeight="25.0" prefWidth="135.0" styleClass="menu-button" text="Calendrier" />
+                  <Button fx:id="questions" mnemonicParsing="false" onAction="#onQuestions" prefHeight="39.0" prefWidth="171.0" styleClass="menu-button" text=" Questionnaires" />
+                  <Button fx:id="anam" mnemonicParsing="false" onAction="#onAnam" prefHeight="39.0" prefWidth="211.0" styleClass="menu-button" text="Anamnèse questions" />
+                  <Button fx:id="disconnect" mnemonicParsing="false" onAction="#onDisconnect" prefHeight="25.0" prefWidth="135.0" styleClass="menu-button" text="Déconnecter" />
+               </children>
+            </VBox>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
